--- a/app/index.html
+++ b/app/index.html
@@ -188,7 +188,7 @@
             <section class="search" style="background-image: url(images/search-bg.jpg);">
                 <div class="container">
                     <div class="search__inner">
-                        <div class="search__inner-title">
+                        <div class="search__inner-title wow">
                             Welcome To Foxtar Market Place!
                         </div>
                         <div class="search__inner-text">
@@ -209,7 +209,7 @@
             <section class="products">
                 <div class="products__wrapper">
                     <div class="container-fluid">
-                        <div class="products__title title">
+                        <div class="products__title title ">
                             Let’s Check Out Our Newest Release Prodcuts
                         </div>
                         <div class="products__inner">
@@ -224,7 +224,7 @@
                         </div>
                         <div class="products__inner-box">
 
-                            <div class="product__item mix category-wordpress category-new" data-order="1">
+                            <div class="product__item wow mix category-wordpress category-new" data-order="1">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -252,7 +252,7 @@
                                 </div>
                             </div>
 
-                            <div class="product__item mix category-component" data-order="2">
+                            <div class="product__item wow mix category-component" data-order="2">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -280,7 +280,7 @@
                                 </div>
                             </div>
 
-                            <div class="product__item mix category-plugins" data-order="3">
+                            <div class="product__item wow mix category-plugins" data-order="3">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -308,7 +308,7 @@
                                 </div>
                             </div>
 
-                            <div class="product__item mix category-psd category-new" data-order="4">
+                            <div class="product__item wow mix category-psd category-new" data-order="4">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -336,7 +336,7 @@
                                 </div>
                             </div>
 
-                            <div class="product__item mix category-wordpress" data-order="5">
+                            <div class="product__item wow mix category-wordpress" data-order="5">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -364,7 +364,7 @@
                                 </div>
                             </div>
 
-                            <div class="product__item mix category-joomla category-popular" data-order="6">
+                            <div class="product__item wow mix category-joomla category-popular" data-order="6">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -392,7 +392,7 @@
                                 </div>
                             </div>
 
-                            <div class="product__item mix category-psd category-popular" data-order="7">
+                            <div class="product__item wow mix category-psd category-popular" data-order="7">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -420,7 +420,7 @@
                                 </div>
                             </div>
 
-                            <div class="product__item mix category-wordpress" data-order="8">
+                            <div class="product__item wow mix category-wordpress" data-order="8">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -459,12 +459,12 @@
             <section class="product-slider">
                 <div class="product-slider__wrapper">
                     <div class="container-fluid">
-                        <div class="product-slider__title title">
+                        <div class="product-slider__title title wow">
                             This Week Trending Products
                         </div>
                         <div class="product-slider__inner">
 
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -491,7 +491,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -518,7 +518,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -545,7 +545,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -572,7 +572,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -599,7 +599,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -626,7 +626,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -653,7 +653,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -680,7 +680,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -707,7 +707,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -734,7 +734,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -761,7 +761,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -788,7 +788,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -815,7 +815,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -842,7 +842,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -869,7 +869,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="product__item">
+                            <div class="product__item wow">
                                 <a class="product__item-img"
                                     style="background-image: url(images/content/product-item.jpg);" href="#"></a>
                                 <div class="product__item-content">
@@ -904,7 +904,7 @@
 
             <section class="advantages">
                 <div class="container">
-                    <div class="advantages__titile title">
+                    <div class="advantages__titile title wow">
                         Why You Choose Foxtar Market Place?
                     </div>
                     <div class="advantages__inner">
@@ -1005,20 +1005,20 @@
                 </div>
             </section>
 
-            <section class="author" style="background-image: url(images/author-bg.jpg);">
+            <section class="author" data-stellar-background-ratio="0.5" data-stellar-vertical-offset="200">
                 <div class="author__box">
                     <div class="author__title">
                         Over <span>20,000</span> Author Are Involved Here!
                     </div>
                     <a href="#" class="author__link">
-                        Become A Author
+                        Become Author
                     </a>
-                </div>
+                </div>   
             </section>
 
             <section class="tutorial">
                 <div class="container">
-                    <div class="tutorial__title title">
+                    <div class="tutorial__title title wow">
                         Free Monthly Tutorials To Help You With Your Project
                     </div>
                     <div class="tutorial__inner">
@@ -1139,7 +1139,6 @@
             </form>
         </div>
     </div>
-
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/libs.min.js"></script>
