--- a/app/index.html
+++ b/app/index.html
@@ -139,7 +139,7 @@
                                         </div>
                                     </a>
                                     <div class="user__menu">
-                                        <ul>
+                                        <ul> 
                                             <li><a class="angle-right" href="#">Portfolio</a></li>
                                             <li><a class="angle-right" href="#">Profile Page</a></li>
                                             <li><a class="angle-right" href="#">Account Setting</a></li>
@@ -169,16 +169,16 @@
                                 <div></div>
                             </div>
                             <ul class="menu__list">
-                                <li><a href="index.html">Home</a></li>
-                                <li><a href="about.html">About</a></li>
-                                <li><a href="#">WordPress</a></li>
-                                <li><a href="#">Joomla</a></li>
-                                <li><a href="#">PSD</a></li>
-                                <li><a href="#">Plugins</a></li>
-                                <li><a href="#">Components</a></li>
-                                <li><a href="#">Pages</a></li>
-                                <li><a href="contact.html">Contact</a></li>
-                                <li><a href="#">Help</a></li>
+                                <li><a class="link__effect" href="index.html">Home</a></li>
+                                <li><a class="link__effect" href="about.html">About</a></li>
+                                <li><a class="link__effect" href="#">WordPress</a></li>
+                                <li><a class="link__effect" href="#">Joomla</a></li>
+                                <li><a class="link__effect" href="#">PSD</a></li>
+                                <li><a class="link__effect" href="#">Plugins</a></li>
+                                <li><a class="link__effect" href="#">Components</a></li>
+                                <li><a class="link__effect" href="#">Pages</a></li>
+                                <li><a class="link__effect" href="contact.html">Contact</a></li>
+                                <li><a class="link__effect" href="#">Help</a></li>
                             </ul>
                         </nav>
                     </div>
@@ -1074,21 +1074,21 @@
                         <div class="footer__col footer__col-menu">
                             <div class="footer__col-title">Join Our Community </div>
                             <ul class="footer__col-list">
-                                <li><a href="#">Home</a></li>
-                                <li><a href="#">Forums</a></li>
-                                <li><a href="#">Become an Author</a></li>
-                                <li><a href="#">Community Meetups</a></li>
-                                <li><a href="#">Become an Affiliate</a></li>
+                                <li><a class="link__effect" href="#">Home</a></li>
+                                <li><a class="link__effect" href="#">Forums</a></li>
+                                <li><a class="link__effect" href="#">Become an Author</a></li>
+                                <li><a class="link__effect" href="#">Community Meetups</a></li>
+                                <li><a class="link__effect" href="#">Become an Affiliate</a></li>
                             </ul>
                         </div>
                         <div class="footer__col footer__col-menu">
                             <div class="footer__col-title">Need Help?</div>
                             <ul class="footer__col-list">
-                                <li><a href="#">Help Center</a></li>
-                                <li><a href="#">Foxtar Market Terms</a></li>
-                                <li><a href="#">Author Terms</a></li>
-                                <li><a href="#">Foxtar Licenses</a></li>
-                                <li><a href="#">Contact Us</a></li>
+                                <li><a class="link__effect" href="#">Help Center</a></li>
+                                <li><a class="link__effect" href="#">Foxtar Market Terms</a></li>
+                                <li><a class="link__effect" href="#">Author Terms</a></li>
+                                <li><a class="link__effect" href="#">Foxtar Licenses</a></li>
+                                <li><a class="link__effect" href="#">Contact Us</a></li>
                             </ul>
                         </div>
                         <div class="footer__col footer__col-social">
